Fix mobile subnavs overflowing

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -99,7 +99,7 @@
     .child-menu {
         display: none;
         list-style: none;
-        margin: 0 -1rem;
+        margin: 0 0 0 -1rem;
         padding: 0 1rem;
         background: $primary-darkest;
 
